fixed overlapping on small screen (#50)
* removed space on small screen

* created grid.js

* fixed overlapping in small screen

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -292,8 +292,9 @@ header {
 	margin-right:10px;
 	position:relative;
 	width:auto;
-	height:100%;
+	max-height:250px;
 	float: left;
+	height:auto;
 }
 
 .wishThumbOld{
